--- a/css/styles.css
+++ b/css/styles.css
@@ -1,202 +1,321 @@
 @keyframes pulse {
-    from {
-        opacity: 0.1;
-    }
-    to {
-        opacity: 0.7;
-    }
+  from {
+    opacity: 0.1;
+  }
+  to {
+    opacity: 0.7;
+  }
 }
 
 @keyframes pulse2 {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 0.5;
-    }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 0.5;
+  }
 }
 
 @keyframes hover {
-    to {
-        transform: translate(-50%, -50%) translateY(-50px);
-    }
+  to {
+    transform: translate(-50%, -50%) translateY(-50px);
+  }
 }
 
 body {
-    /* border: 2px solid red; */
-    /* display: grid; */
-    /* place-items: center; */
-    background: transparent;
-    color: white;
+  /* display: grid; */
+  /* place-items: center; */
+  background: transparent;
+  color: white;
 }
 
 body::before {
-    background: url('../assets/images/cycloneStudios/cyclone-hi-res.png') top center / cover no-repeat;
-    box-shadow: inset 0 0 25px 5px black;
-    content: '';
-    filter: brightness(125%);
-    inset: 0;
-    position: absolute;
-    z-index: -1;
-} 
+  background: url('../assets/images/cycloneStudios/cyclone-studios-background.webp')
+    top center / cover no-repeat;
+  box-shadow: inset 0 0 25px 5px black;
+  content: '';
+  filter: brightness(125%);
+  inset: 0;
+  position: absolute;
+  z-index: -1;
+}
 
 body::after {
-    animation: pulse 9s ease-in-out infinite alternate;
-    background: url('../assets/images/cycloneStudios/static.gif') center / contain repeat;
-    content: '';
-    filter: brightness(70%);
-    inset: 0;
-    position: absolute;
-    z-index: -1;
+  animation: pulse 9s ease-in-out infinite alternate;
+  background: url('../assets/images/cycloneStudios/atmosphere.gif') center /
+    contain repeat;
+  content: '';
+  filter: brightness(70%);
+  inset: 0;
+  position: absolute;
+  z-index: -1;
 }
 
-body #cyclone-logo-container {
-    animation: hover 5.55s ease-in-out infinite alternate;
-    cursor: pointer;
-    left: 50%;
-    position: fixed;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: clamp(340px, 55vw, 700px);
+body #cyclone-logo-button {
+  animation: hover 5.55s ease-in-out infinite alternate;
+  cursor: pointer;
+  left: 50%;
+  position: fixed;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  transition: all 1s ease-in-out;
+  width: clamp(340px, 55vw, 700px);
 }
 
-body #cyclone-logo-container:hover {
-    animation-play-state: paused;
-} 
+body #cyclone-logo-button:hover {
+  animation-play-state: paused;
+}
 
-body #cyclone-logo-container:hover::before {
-    -webkit-animation: pulse2 0.5s ease-in-out infinite alternate;
-    animation: pulse2 0.5s ease-in-out infinite alternate;
+body #cyclone-logo-button:hover::before {
+  -webkit-animation: pulse2 0.5s ease-in-out infinite alternate;
+  animation: pulse2 0.5s ease-in-out infinite alternate;
 }
 
 body #cyclone-logo {
-    opacity: 0.5;
-    filter: drop-shadow(0 0 3px #848884);
+  opacity: 0.5;
+  filter: drop-shadow(0 0 3px #848884);
 }
 
-body #cyclone-logo-container::before {
-    -webkit-animation: pulse2 3s ease-in-out infinite alternate;
-    animation: pulse2 3s ease-in-out infinite alternate;
-    content: url('../assets/images/logos/cycloneStudios.svg');
-    filter: drop-shadow(0 0 8px #848884);
-    height: 100%;
-    inset: 0;
-    position: absolute;
-    width: 100%;
-    z-index: -1;
+body #cyclone-logo-button::before {
+  -webkit-animation: pulse2 3s ease-in-out infinite alternate;
+  animation: pulse2 3s ease-in-out infinite alternate;
+  content: url('../assets/images/logos/cycloneStudios.svg');
+  filter: drop-shadow(0 0 8px #848884);
+  height: 100%;
+  inset: 0;
+  position: absolute;
+  width: 100%;
+  z-index: -1;
 }
 
 body #cyclone-accordion-container {
-    margin-inline: auto;
-    max-width: 50rem;
-    padding-inline: 1rem;
-    z-index: 1;
+  --_accordion-padding: 8px;
+
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  width: min(88vw, 888px);
+  z-index: 1;
+
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.5s ease-in-out;
+}
+
+body #cyclone-accordion-close-button {
+  color: whitesmoke;
+  cursor: pointer;
+  filter: drop-shadow(0 0 8px whitesmoke);
+  font-size: 2rem;
+  position: absolute;
+  right: var(--_accordion-padding);
+  top: -10%;
+  transition: transform 100ms ease-in-out;
+}
+
+body #cyclone-accordion-close-button:hover {
+  transform: scale(1.1);
+}
+
+body #cyclone-accordion-close-button:active {
+  transform: scale(1);
 }
 
 body #cyclone-accordion {
-    --_button-size: 3rem;
-    --_panel-padding: 0.75rem;
+  --_button-size: 3rem;
+  --_panel-padding: 0.75rem;
+  --_panel-gap: 1rem;
 
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  contain: content;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: var(--_accordion-padding);
+}
 
-    /* ! demo */
-    padding-top: 20rem;
+@media (min-width: 45em) {
+  body #cyclone-accordion {
+    flex-direction: row;
+    height: 30rem;
+  }
 }
 
 body #cyclone-accordion .accordion-panel {
-    border-radius: calc(((var(--_panel-padding) * 2) + var(--_button-size)) / 2);
-    flex-basis: calc((var(--_panel-padding) * 2) + var(--_button-size)); /* ? always the size on the main axis */
-    isolation: isolate; 
-    overflow: hidden;
-    padding: var(--_panel-padding);
-    position: relative;
+  border-radius: calc(((var(--_panel-padding) * 2) + var(--_button-size)) / 2);
+  cursor: pointer;
+  flex-basis: calc(
+    (var(--_panel-padding) * 2) + var(--_button-size)
+  ); /* ? always the size on the main axis */
+  isolation: isolate;
+  overflow: hidden;
+  padding: var(--_panel-padding);
+  padding-right: calc(var(--_panel-padding) * 4);
+  position: relative;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  body #cyclone-accordion .accordion-panel {
+    transition: flex-basis 0.5s ease-in-out, flex-grow 0.5s ease-in-out;
+  }
 }
 
 body #cyclone-accordion .accordion-panel:nth-child(1) {
-    --_panel-color: red;
+  --_panel-color: var(--color-binky);
 }
 
 body #cyclone-accordion .accordion-panel:nth-child(2) {
-    --_panel-color: blue;
+  --_panel-color: var(--color-pinky);
 }
 
 body #cyclone-accordion .accordion-panel:nth-child(3) {
-    --_panel-color: green;
+  --_panel-color: var(--color-inky);
 }
 
 body #cyclone-accordion .accordion-panel:nth-child(4) {
-    --_panel-color: orange;
+  --_panel-color: var(--color-clyde);
 }
 
 body #cyclone-accordion .accordion-panel:nth-child(5) {
-    --_panel-color: purple;
+  --_panel-color: var(--color-pacman);
 }
 
 /* ? can be refactored using javascript */
-body #cyclone-accordion .accordion-panel:has([aria-expanded="true"]) {
-    flex-basis: clamp(15rem, 40vh, 20rem);
-} 
+body #cyclone-accordion .accordion-panel:has([aria-expanded='true']) {
+  flex-basis: clamp(15rem, 40vh, 20rem);
+  flex-grow: 1;
+}
+
+body .accordion-trigger {
+  outline: none;
+}
+
+body .accordion-panel:focus-within {
+  outline: 3px solid var(--_panel-color);
+  outline-offset: 4px;
+}
 
 body #cyclone-accordion .accordion-content > p {
-    opacity: 0;
-    transform: translateY(2rem);
+  margin-left: calc(var(--_button-size) + var(--_panel-gap));
+  opacity: 0;
+  transform: translateY(2rem);
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  body #cyclone-accordion .accordion-panel:has([aria-expanded='true']) p {
+    transition: all 0.5s ease-in-out 0.5s;
+  }
+}
+
+body #cyclone-accordion .accordion-panel:has([aria-expanded='true']) p {
+  opacity: 1;
+  transform: translateY(0rem);
+}
+
+body #cyclone-accordion .accordion-title {
+  align-items: center;
+  color: white;
+  display: grid;
+  font-size: 1.75rem;
+  font-weight: 700;
+  isolation: isolate;
+  position: relative;
+}
+
+@media (max-width: 44.999em) {
+  body #cyclone-accordion .accordion-title::after {
+    background: hsla(0, 0%, 0%, 0.5);
+    border-radius: 100vw;
+    content: '';
+    position: absolute;
+    height: var(--_button-size);
+    left: calc((var(--_panel-gap) + var(--_button-size)) * -1);
+    width: calc(100% + var(--_button-size) * 2);
+    z-index: -1;
+  }
 }
 
 body #cyclone-accordion .accordion-image {
-    height: 100%;
-    inset: 0;
-    object-fit: cover;
-    position: absolute;
-    width: 100%;
-    z-index: -1;
-} 
+  height: 100%;
+  inset: 0;
+  object-fit: cover;
+  position: absolute;
+  transition: filter 0.5s ease-in-out;
+  width: 100%;
+  z-index: -1;
+}
+
+body
+  #cyclone-accordion
+  .accordion-panel:has([aria-expanded='true'])
+  .accordion-image {
+  filter: brightness(0.5);
+}
 
 body #cyclone-accordion .accordion-trigger {
-    align-items: center;
-    background: transparent;
-    border: 0;
-    display: flex;
-    flex-direction: row-reverse;
-    gap: 1rem;
+  align-items: center;
+  background: transparent;
+  border: 0;
+  display: flex;
+  flex-direction: row-reverse;
+  gap: var(--_panel-gap);
 }
 
 body #cyclone-accordion .accordion-icon {
-    fill: var(--_panel-color);
-    background: hsla(0, 0%, 0%, 0.55);
-    aspect-ratio: 1 / 1;
-    border-radius: 50%;
-    padding: 0.75rem;
-    width: var(--_button-size);
+  aspect-ratio: 1 / 1;
+  background: hsla(0, 0%, 0%, 0.55);
+  border-radius: 50%;
+  /* filter: drop-shadow(0 0 1px var(--_panel-color)); */
+  fill: var(--_panel-color);
+  width: var(--_button-size);
+  z-index: 1;
 }
 
-#code {
-    aspect-ratio: 1 / 1;
-    position: absolute;
-    bottom: 0;
-    filter: saturate(0);
-    right: 0;
-    opacity: 0.1;
-    height: 150px;
-    z-index: -1;
+use {
+  filter: drop-shadow(0 0 5px var(--_panel-color));
+}
+
+#code-container {
+  aspect-ratio: 1 / 1;
+  /* border: 2px solid red; */
+  bottom: 0;
+  width: clamp(100px, 25vw, 300px);
+  position: absolute;
+  right: 0;
+}
+
+#code-container #code {
+  filter: saturate(0);
+  position: absolute;
+  opacity: 0.2;
+  height: 100%;
+  pointer-events: none;
+  width: 100%;
+  z-index: -1;
+}
+
+#code-container #cyclone-c {
+  height: 100%;
+  opacity: 0.5;
+  pointer-events: none;
+  width: 100%;
 }
 
 /* demo */
 figure {
-    position: fixed;
-    bottom: 25px;
-    left: 50%;
-    transform: translateX(-50%) scale(0.75);
+  position: fixed;
+  bottom: 25px;
+  left: 50%;
+  transform: translateX(-50%) scale(0.75);
 }
 
 figure audio {
-    appearance: none;
+  appearance: none;
 }
 
 audio::-webkit-media-controls-panel {
-    background-color: rgb(88, 88, 88);
-    filter: drop-shadow(0 10px white);
+  background-color: rgb(88, 88, 88);
+  filter: drop-shadow(0 10px white);
 }
 
 /* audio::-webkit-media-controls-mute-button
