--- a/css/styles.css
+++ b/css/styles.css
@@ -16,12 +16,6 @@
   }
 }
 
-@keyframes hover {
-  to {
-    transform: translateY(-50px);
-  }
-}
-
 body {
 	color: white;
 	display: grid;
@@ -53,16 +47,14 @@ body::after {
 }
 
 body #cyclone-logo-button {
-  animation: hover 5.55s ease-in-out infinite alternate;
   cursor: pointer;
 	grid-area: center;
   transform: scale(1);
-	transition: animation-play-state 1s ease-in-out, opacity 1s ease-in-out, transform 0.5s ease-in-out;
+	transition: opacity 1s ease-in-out, transform 0.5s ease-in-out;
   width: clamp(340px, 55vw, 700px);
 }
 
 body #cyclone-logo-button.clicked {
-	animation-play-state: paused;
 	opacity: 0;
 	transform: scale(0);
 } 
