--- a/css/styles.css
+++ b/css/styles.css
@@ -99,12 +99,12 @@ body #cyclone-accordion-container {
   --_accordion-padding: 8px;
 
   grid-area: center;
-  transform: scale(0);
-  width: min(88vw, 888px);
-  transition: opacity 1s ease-in-out, transform 0.5s ease-in-out;
-  z-index: 1;
-
   opacity: 0;
+	margin-top: 10vh;
+  transform: scale(0);
+  transition: opacity 1s ease-in-out, transform 0.5s ease-in-out;
+  width: min(88vw, 888px);
+  z-index: 1;
 }
 
 body #cyclone-accordion-container.active {
@@ -117,22 +117,31 @@ body #cyclone-accordion-close-button {
   cursor: pointer;
   filter: drop-shadow(0 0 8px whitesmoke);
   font-size: 2rem;
+	opacity: 0;
   position: absolute;
   right: var(--_accordion-padding);
-  top: -10%;
-  transition: transform 100ms ease-in-out;
+  top: -55px;
+	transform: scale(0) rotate(3turn);
+  transition: transform 1s ease-in-out, opacity 0.5s ease-in-out 0.5s;
 }
 
-body #cyclone-accordion-close-button:hover {
-  transform: scale(1.1);
+body #cyclone-accordion-container.active #cyclone-accordion-close-button {
+	opacity: 1;
+	transform: scale(1) rotate(0turn);
 }
 
-body #cyclone-accordion-close-button:active {
+body #cyclone-accordion-container.active #cyclone-accordion-close-button:hover {
+	transition: transform 100ms ease-in-out;
+	transform: scale(1.3);
+}
+
+body #cyclone-accordion-container.active #cyclone-accordion-close-button:active {
+	transition: transform 100ms ease-in-out;
   transform: scale(1);
 }
 
 body #cyclone-accordion {
-  --_button-size: 3.5rem;
+  --_button-size: clamp(2rem, 5vw, 3.5rem);
   --_panel-padding: 0.5rem;
   --_panel-gap: 0.75rem;
 
@@ -152,6 +161,8 @@ body #cyclone-accordion {
 
 body #cyclone-accordion .accordion-panel {
   border-radius: calc(((var(--_panel-padding) * 2) + var(--_button-size)) / 2);
+	box-shadow: 0 0 8px var(--_panel-color);
+	/* box-shadow: 0 0 8px whitesmoke; */
   cursor: pointer;
   flex-basis: calc(
     (var(--_panel-padding) * 2) + var(--_button-size)
@@ -261,7 +272,7 @@ body
   #cyclone-accordion
   .accordion-panel:has([aria-expanded='true'])
   .accordion-image {
-  /* filter: brightness(0); */
+  filter: brightness(0);
   /* filter: brightness(0.5); */
 }
 
