--- a/css/styles.css
+++ b/css/styles.css
@@ -128,14 +128,16 @@ body #cyclone-accordion-container {
   opacity: 0;
 	margin-top: 10vh;
   transform: scale(0);
-  transition: opacity 1s ease-in-out, transform 0.5s ease-in-out;
+  transition: opacity 1s ease-in-out, transform 0.5s ease-in-out, visibility 1s;
+	visibility: hidden;
   width: min(88vw, 888px);
   z-index: 1;
 }
 
 body #cyclone-accordion-container.active {
-  opacity: 1;
+	opacity: 1;
   transform: scale(1);
+	visibility: visible;
 }
 
 body #cyclone-accordion-close-button {
