--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ body time {
 	position: fixed;
 	top: 1rem;
 	left: 1rem;
-	text-shadow: 0 0 3px var(--color-inky);
+	text-shadow: 0 0 3px rgb(125, 207, 216);
 	transition: opacity 380ms ease-in-out;
 }
 
@@ -97,7 +97,7 @@ body #cyclone-logo-button::before {
   -webkit-animation: pulse 3s ease-in-out infinite alternate;
   animation: pulse 3s ease-in-out infinite alternate;
   content: url('../assets/images/logos/cycloneStudios.svg');
-  filter: drop-shadow(0 0 8px #848884);
+  filter: drop-shadow(0 0 8px rgb(125, 207, 216));
   height: 100%;
   inset: 0;
   position: absolute;
@@ -110,7 +110,7 @@ body #cyclone-logo-button::after {
   animation: pulse 380ms ease-in-out infinite alternate;
 	animation-play-state: paused;
   content: url('../assets/images/logos/cycloneStudios.svg');
-  filter: drop-shadow(0 0 8px var(--color-inky));
+  filter: drop-shadow(0 0 8px rgb(125, 207, 216));
   height: 100%;
   inset: 0;
 	opacity: 0;
@@ -124,7 +124,7 @@ body #cyclone-accordion-container {
 
   grid-area: center;
   opacity: 0;
-	margin-top: 10vh;
+	margin-top: 5vh;
   transform: scale(0);
   transition: opacity 1s ease-in-out, transform 0.5s ease-in-out, visibility 1s;
 	visibility: hidden;
