--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,7 @@ body main #cyclone-accordion-container.active #cyclone-accordion-close-button:fo
 }
 
 body main #cyclone-accordion {
-  --_button-size: clamp(2rem, 5vw, 3.5rem);
+  --_button-size: 2.5rem;
   --_panel-padding: 0.5rem;
   --_panel-gap: 0.75rem;
 
@@ -299,7 +299,7 @@ body main #cyclone-accordion .accordion-title {
   align-items: center;
   color: white;
   display: grid;
-  font-size: clamp(1.313rem, 5vw, 2.75rem);
+  font-size: clamp(1.625rem, 3vw, 2.5rem);
   isolation: isolate;
   position: relative;
 }
