--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,23 @@
   }
 }
 
+@keyframes rotate {
+  from {
+    transform: rotate(0turn);
+  }
+  to {
+    transform: rotate(1turn);
+  }  
+}
+
+* {
+  cursor: none !important;
+}
+
 body {
   color: white;
   display: grid;
   font-family: 'Cyclone', monospace;
-  grid-template-areas: 'center';
   place-items: center;
 }
 
@@ -44,32 +56,79 @@ body:has(#cyclone-logo-button:hover)::after {
 	opacity: 1;
 }
 
-body time {
-	cursor:default;
-	color: black;
-	font-family: 'Orbitron', sans-serif;
-	font-size: clamp(1.313rem, 3vw, 2.125rem);
-	opacity: 0.5;
+body #time-capsule {
+  aspect-ratio: 1 / 1;
+	cursor: pointer;
 	position: fixed;
 	top: 1rem;
-	left: 1rem;
-	text-shadow: 0 0 3px rgb(125, 207, 216);
-	transition: opacity 100ms ease-in-out;
+	right: 1rem;
+  transform-origin: top left;
+	transition: opacity 100ms ease-in-out, transform 0.5s ease-in-out;
+  width: clamp(100px, 10vw, 250px);
 }
 
-body time:hover {
+body #time-capsule:hover ~ #cyclone-cursor #cyclone-c {
+  animation: rotate 1s ease-in-out infinite;
+  filter: drop-shadow(0 0 5px var(--color-binky));
+}
+
+body #time-capsule:hover #code-container #code {
+  filter: saturate(0) drop-shadow(0 0 3px var(--color-binky));
+  opacity: 0.1;
+  transform: scale(0.8);
+}
+
+body #time-capsule time {
+  color: whitesmoke;
+  font-family: 'Orbitron', sans-serif;
+  font-size: 0.8313;
+  height: max-content;
+  inset: 0;
+  margin: auto;
+  opacity: 0;
+  position: absolute;
+  text-shadow: 0 0 3px var(--color-binky);
+  transform: scale(0);
+  transition: opacity 380ms ease-in-out, transform 0.5s ease-in-out;
+  width: max-content;
+  z-index: 1;
+}
+
+body #time-capsule:hover time {
 	opacity: 1;
+  transform: scale(1);
+}
+
+body #time-capsule #code-container {
+  height: 100%;
+  inset: 0;
+  position: absolute;
+  width: 100%;
+}
+
+body #time-capsule #code-container #code {
+  filter: saturate(0) drop-shadow(0 0 3px rgb(125, 207, 216));
+  position: absolute;
+  height: 100%;
+  opacity: 0.3;
+  pointer-events: none;
+  transition: opacity 380ms ease-in-out, transform 0.5s ease-in-out;
+  width: 100%;
+  z-index: -1;
 }
 
 body main {
   display: grid;
+  grid-template-areas: 'center';
   place-items: center;
+  width: max-content;
 }
 
 body main #cyclone-logo-button {
-  cursor: pointer;
+  /* cursor: pointer; */
   grid-area: center;
   transform: scale(1);
+  position: relative;
   transition: opacity 1s ease-in-out, transform 0.5s ease-in-out;
   width: clamp(300px, 50vw, 700px);
 }
@@ -93,7 +152,7 @@ body main #cyclone-logo-button:focus-visible::after {
 	opacity: 1 ;
 }
 
-body main #cyclone-logo {
+body main #cyclone-logo-button #cyclone-logo {
   opacity: 0.5;
   filter: drop-shadow(0 0 3px #848884);
 }
@@ -131,19 +190,19 @@ body main #cyclone-accordion-container {
   opacity: 0;
   transform: scale(0);
   transition: opacity 1s ease-in-out, transform 0.5s ease-in-out;
-  width: min(88vw, 888px);
   z-index: 1;
 }
 
 body main #cyclone-accordion-container.active {
 	opacity: 1;
   transform: scale(1);
+  width: min(88vw, 888px);
 }
 
 body main #cyclone-accordion-close-button {
 	display: none;
   color: whitesmoke;
-  cursor: pointer;
+  /* cursor: pointer; */
   filter: drop-shadow(0 0 8px);
   font-size: 2rem;
 	opacity: 0;
@@ -210,7 +269,7 @@ body main #cyclone-accordion-container.active #cyclone-accordion {
 body main #cyclone-accordion .accordion-panel {
   border-radius: calc(((var(--_panel-padding) * 2) + var(--_button-size)) / 2);
 	box-shadow: 0 0 8px whitesmoke;
-  cursor: pointer;
+  /* cursor: pointer; */
   flex-basis: calc(
     (var(--_panel-padding) * 2) + var(--_button-size)
   ); /* ? always the size on the main axis */
@@ -264,13 +323,13 @@ body main #cyclone-accordion .accordion-panel:nth-child(5) {
 /* ? can be refactored using javascript */
 body main #cyclone-accordion .accordion-panel:has([aria-expanded='true']) {
 	box-shadow: 0 0 8px 3px var(--_panel-color);
-  cursor: auto;
+  /* cursor: auto; */
   flex-basis: clamp(10rem, 30vh, 15rem);
   flex-grow: 1;
 }
 
 body main #cyclone-accordion .accordion-trigger {
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
 body main #cyclone-accordion .accordion-content > p {
@@ -354,6 +413,20 @@ body main #cyclone-accordion .accordion-icon {
   z-index: 1;
 }
 
+body #cyclone-cursor {
+  aspect-ratio: 1 / 1;
+  inset: 0;
+  pointer-events: none;
+  position: absolute;
+  width: 55px;
+  z-index: 1;
+}
+
+body #cyclone-cursor #cyclone-c {
+  filter: drop-shadow(0 0 3px rgb(125, 207, 216));
+  transition: all 380ms ease-out;
+}
+
 /* ! ⬇️ needs-a-organizin' ⬇️ */
 
 use {
@@ -365,37 +438,12 @@ body main #cyclone-accordion .accordion-panel:hover use {
   opacity: 0.5;
 }
 
-#code-container {
-  aspect-ratio: 1 / 1;
-  bottom: 0;
-  width: clamp(100px, 25vw, 300px);
-  position: absolute;
-  right: 0;
-}
-
-#code-container #code {
-  filter: saturate(0);
-  position: absolute;
-  opacity: 0.2;
-  height: 100%;
-  pointer-events: none;
-  width: 100%;
-  z-index: -1;
-}
-
-#code-container #cyclone-c {
-  height: 100%;
-  opacity: 0.5;
-  pointer-events: none;
-  width: 100%;
-}
-
 /* demo */
 figure {
   position: fixed;
   bottom: 25px;
   left: 50%;
-  transform: translateX(-50%) scale(0.75);
+  transform: translateX(-50%);
 }
 
 figure audio {
