--- a/css/styles.css
+++ b/css/styles.css
@@ -378,12 +378,13 @@ body main #cyclone-accordion .accordion-title {
   }
 }
 
-body main #cyclone-accordion .accordion-image {
+body main #cyclone-accordion .accordion-background {
+  background: linear-gradient(to bottom, black, transparent, silver);
   height: 100%;
   inset: 0;
-  object-fit: cover;
+  opacity: 0.5;
   position: absolute;
-  transition: filter 0.5s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
   width: 100%;
   z-index: -1;
 }
@@ -391,8 +392,8 @@ body main #cyclone-accordion .accordion-image {
 body main
   #cyclone-accordion
   .accordion-panel:has([aria-expanded='true'])
-  .accordion-image {
-  filter: brightness(0.5);
+  .accordion-background {
+  opacity: 1;
 }
 
 body main #cyclone-accordion .accordion-trigger {
