--- a/css/cyclone-reset.css
+++ b/css/cyclone-reset.css
@@ -1,17 +1,5 @@
 @font-face {
-body #cyclone-cursor {
-  aspect-ratio: 1 / 1;
-  inset: 0;
-  pointer-events: none;
-  position: absolute;
-  width: 55px;
-  z-index: 1;
-}
-
-body #cyclone-cursor #cyclone-c {
-  filter: drop-shadow(0 0 3px rgb(125, 207, 216));
-  transition: all 380ms ease-out;
-}  font-family: 'Cyclone';
+  font-family: 'Cyclone';
   src: url(../assets/fonts/Cyclone.woff2) format('woff2');
 }
 
